--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   "dependencies": {
     "compression": "^1.7.4",
     "polka": "0.5.2",
-    "sirv": "^1.0.7"
+    "sirv": "^1.0.10"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
     "sapper": "^0.28.10",
-    "svelte": "^3.29.0",
-    "@babel/core": "^7.12.3",
+    "svelte": "^3.31.2",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "rollup": "^2.32.0",
-    "rollup-plugin-svelte": "^6.0.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/runtime": "^7.12.5",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-url": "^6.0.0",
+    "rollup": "^2.35.1",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
